--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>TEQRA</title>
+<title>TEQRA — FOUNDATION</title>
 
 <style>
 *{
@@ -11,118 +11,99 @@
   padding:0;
   box-sizing:border-box;
   user-select:none;
-  -webkit-user-select:none;
 }
 html,body{
   width:100%;
   height:100%;
-  overflow:hidden;
   background:#000;
+  overflow:hidden;
   font-family:"Courier New", monospace;
   color:#eaeaea;
 }
 
-/* COLORS */
+/* ===== COLORS ===== */
 :root{
   --green:#00ff9c;
-  --gold:#ffb86b;
   --red:#ff4d4d;
-  --blue:#66d9ff;
-  --violet:#c792ea;
+  --gold:#ffb86b;
 }
 
-/* MATRIX */
+/* ===== MATRIX BACKGROUND ===== */
 canvas{
   position:fixed;
   inset:0;
   z-index:1;
 }
 
-/* UI */
-.screen{
+/* ===== UI LAYERS ===== */
+#ui{
   position:fixed;
   inset:0;
   z-index:3;
   display:flex;
-  justify-content:center;
+  flex-direction:column;
   align-items:center;
-  opacity:0;
   pointer-events:none;
-  transition:opacity 1s;
-}
-.screen.active{
-  opacity:1;
-  pointer-events:auto;
 }
 
-.panel{
-  max-width:760px;
-  padding:24px;
-  text-align:center;
-}
-
-.line{
-  margin:14px 0;
+/* ===== TOP BAR ===== */
+#top{
+  width:100%;
+  padding:16px;
+  display:flex;
+  justify-content:center;
   font-size:18px;
-}
-
-.glitch{
-  animation:glitch 1.4s infinite;
-}
-@keyframes glitch{
-  0%{text-shadow:none}
-  40%{text-shadow:-2px 0 red,2px 0 cyan}
-  80%{text-shadow:2px 0 red,-2px 0 cyan}
-  100%{text-shadow:none}
-}
-
-/* CHOICE */
-.choice{
-  border:2px solid;
-  padding:18px;
-  margin:16px 0;
-  cursor:pointer;
-}
-.choice:hover{
-  background:rgba(255,255,255,.05);
-}
-
-/* TOP HUD */
-#hud{
-  position:fixed;
-  top:12px;
-  left:50%;
-  transform:translateX(-50%);
-  z-index:10;
-  font-size:16px;
   letter-spacing:2px;
 }
 #entropy{
   color:var(--red);
+  margin-left:8px;
 }
 
-/* FRACTURES */
+/* ===== TEXT ===== */
+#text{
+  margin-top:60px;
+  text-align:center;
+  max-width:720px;
+  line-height:1.6;
+}
+.glitch{
+  animation:glitch 1.2s infinite;
+}
+@keyframes glitch{
+  0%{text-shadow:none}
+  30%{text-shadow:-2px 0 red,2px 0 cyan}
+  60%{text-shadow:2px 0 red,-2px 0 cyan}
+  100%{text-shadow:none}
+}
+
+/* ===== FRACTURES ===== */
 .fracture{
   position:fixed;
   width:90px;
   height:90px;
   background:#000;
   border:2px solid var(--red);
-  box-shadow:0 0 20px var(--red);
-  z-index:6;
-  animation:pulse 1s infinite;
+  box-shadow:0 0 25px var(--red);
+  z-index:5;
+  cursor:pointer;
+  animation:pulse 1.1s infinite;
+}
+.fracture.good{
+  border-style:solid;
 }
 .fracture.fake{
   border-style:dashed;
-  opacity:.6;
-}
-@keyframes pulse{
-  0%{transform:scale(.9)}
-  50%{transform:scale(1.05)}
-  100%{transform:scale(.9)}
+  opacity:.8;
 }
 
-/* SHAKE */
+@keyframes pulse{
+  0%{transform:scale(.95)}
+  50%{transform:scale(1.05)}
+  100%{transform:scale(.95)}
+}
+
+/* ===== SHAKE ===== */
 body.chaos{
   animation:shake .15s infinite;
 }
@@ -140,52 +121,24 @@ body.chaos{
 
 <canvas id="matrix"></canvas>
 
-<div id="hud" style="display:none">
-  РІВЕНЬ РОЗПАДУ: <span id="entropy">82</span>%
-</div>
-
-<!-- PROLOGUE -->
-<div id="prologue" class="screen active">
-  <div class="panel">
-    <div class="line">СИСТЕМА ТРІЩИТЬ.</div>
-    <div class="line">НЕ ЗОВНІ — ВСЕРЕДИНІ.</div>
-    <div class="line glitch">ДАНІ РОЗПАДАЮТЬСЯ.</div>
-    <div class="line">ПОТРІБЕН ПРИНЦИП.</div>
+<div id="ui">
+  <div id="top">
+    РІВЕНЬ РОЗПАДУ:
+    <span id="entropy">72</span>%
   </div>
-</div>
 
-<!-- CHOICE -->
-<div id="choice" class="screen">
-  <div class="panel">
-    <div class="line">ОБЕРИ ШЛЯХ.</div>
-
-    <div class="choice" style="border-color:var(--gold);color:var(--gold)"
-      onclick="selectPath('foundation')">
-      ФУНДАМЕНТ // СТІЙКІСТЬ
-    </div>
-
-    <div class="choice" style="border-color:var(--blue);color:var(--blue)">
-      АРХІТЕКТОР // ЛОГІКА
-    </div>
-
-    <div class="choice" style="border-color:var(--violet);color:var(--violet)">
-      РЕЗОНАНС // ЗВʼЯЗКИ
-    </div>
-  </div>
-</div>
-
-<!-- FOUNDATION -->
-<div id="foundation" class="screen">
-  <div class="panel">
-    <div class="line" style="color:var(--gold)">ГЛАВА I — ФУНДАМЕНТ</div>
-    <div class="line">СИСТЕМА ВТРАЧАЄ ФОРМУ.</div>
-    <div class="line">ТИ УТРИМУЄШ СТРУКТУРУ.</div>
-    <div class="line glitch" id="status"></div>
+  <div id="text">
+    <div class="glitch">ГЛАВА I — ФУНДАМЕНТ</div>
+    <br>
+    Система втрачає форму.<br>
+    Дані більше не сходяться.<br><br>
+    <b>Ти не виправляєш.</b><br>
+    <b>Ти утримуєш структуру.</b>
   </div>
 </div>
 
 <script>
-/* MATRIX */
+/* ===== MATRIX ===== */
 const canvas=document.getElementById("matrix");
 const ctx=canvas.getContext("2d");
 let w,h,cols;
@@ -195,99 +148,83 @@ function resize(){
   cols=Math.floor(w/16);
 }
 resize();onresize=resize;
-
 const chars="01";
 let drops=Array(cols).fill(0);
 
 function matrix(){
-  ctx.fillStyle="rgba(0,0,0,.4)";
+  ctx.fillStyle="rgba(0,0,0,.3)";
   ctx.fillRect(0,0,w,h);
   ctx.fillStyle="#00ff9c";
   ctx.font="16px monospace";
   drops.forEach((y,i)=>{
     ctx.fillText(chars[Math.random()>0.5?1:0],i*16,y*16);
-    if(y*16>h||Math.random()>.97)drops[i]=0;
+    if(y*16>h||Math.random()>.96)drops[i]=0;
     drops[i]++;
   });
   requestAnimationFrame(matrix);
 }
 matrix();
 
-/* FLOW */
-setTimeout(()=>{
-  prologue.classList.remove("active");
-  choice.classList.add("active");
-},5000);
-
-let entropy=82;
-let fractures=[];
+/* ===== GAME LOGIC ===== */
+let entropy=72;
 let stabilized=false;
-const ent=document.getElementById("entropy");
-const hud=document.getElementById("hud");
-const status=document.getElementById("status");
-
-function selectPath(p){
-  choice.classList.remove("active");
-  if(p==="foundation"){
-    foundation.classList.add("active");
-    hud.style.display="block";
-    startFoundation();
-  }
-}
+let fractures=[];
+const entropyEl=document.getElementById("entropy");
 
 function spawnFracture(){
-  const f=document.createElement("div");
-  f.className="fracture";
-  const fake=Math.random()<0.35;
-  if(fake)f.classList.add("fake");
+  if(fractures.length>6) return;
 
+  const f=document.createElement("div");
+  const isReal=Math.random()<0.65;
+
+  f.className="fracture "+(isReal?"good":"fake");
   f.style.top=Math.random()*75+"%";
   f.style.left=Math.random()*75+"%";
 
   f.onclick=()=>{
-    if(fake){
-      f.style.top=Math.random()*75+"%";
-      f.style.left=Math.random()*75+"%";
-      entropy+=2;
+    if(isReal){
+      entropy-=10;
+      f.style.borderColor="var(--green)";
+      f.style.boxShadow="0 0 25px var(--green)";
     }else{
-      entropy-=8;
-      f.remove();
-      fractures=fractures.filter(x=>x!==f);
+      entropy+=6;
+      f.style.transform="translate(40px,-40px)";
     }
+    f.remove();
+    fractures=fractures.filter(x=>x!==f);
   };
 
   document.body.appendChild(f);
   fractures.push(f);
 }
 
-function startFoundation(){
-  setInterval(()=>{
-    if(stabilized)return;
+setInterval(()=>{
+  if(stabilized) return;
 
-    entropy+=fractures.length*0.15;
-    entropy=Math.max(0,Math.min(100,entropy));
-    ent.textContent=Math.floor(entropy);
+  entropy+=0.3;
+  entropy+=fractures.length*0.2;
 
-    if(entropy>75){
-      status.textContent="СТРУКТУРА РОЗЛАМУЄТЬСЯ.";
-      document.body.classList.add("chaos");
-      if(Math.random()<0.08)spawnFracture();
-    }else if(entropy>45){
-      status.textContent="НАПРУЖЕННЯ ЗРОСТАЄ.";
-      document.body.classList.remove("chaos");
-      if(Math.random()<0.05)spawnFracture();
-    }else{
-      status.textContent="ФОРМА ТРИМАЄТЬСЯ.";
-      document.body.classList.remove("chaos");
-    }
+  entropy=Math.max(0,Math.min(100,entropy));
+  entropyEl.textContent=Math.floor(entropy);
 
-    if(entropy<=5){
-      stabilized=true;
-      status.textContent="ФУНДАМЕНТ ЗАКРІПЛЕНО.";
-      fractures.forEach(f=>f.remove());
-    }
-  },90);
-}
+  if(entropy>85){
+    document.body.classList.add("chaos");
+    if(Math.random()<0.08) spawnFracture();
+  }else if(entropy>65){
+    document.body.classList.remove("chaos");
+    if(Math.random()<0.05) spawnFracture();
+  }else{
+    document.body.classList.remove("chaos");
+  }
+
+  if(entropy<=0){
+    stabilized=true;
+    document.getElementById("text").innerHTML=
+      "<b>ФУНДАМЕНТ УТРИМАНО.</b><br><br>Система стабілізується.";
+    fractures.forEach(f=>f.remove());
+  }
+
+},120);
 </script>
 
 </body>
