--- a/index.html
+++ b/index.html
@@ -3,116 +3,68 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>TEQRA — FOUNDATION</title>
+<title>TEQRA</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  user-select:none;
-}
-html,body{
-  width:100%;
-  height:100%;
-  background:#000;
-  overflow:hidden;
-  font-family:"Courier New", monospace;
-  color:#eaeaea;
-}
+*{margin:0;padding:0;box-sizing:border-box;user-select:none}
+html,body{width:100%;height:100%;background:#000;color:#eaeaea;font-family:"Courier New",monospace;overflow:hidden}
 
-/* ===== COLORS ===== */
 :root{
-  --green:#00ff9c;
-  --red:#ff4d4d;
-  --gold:#ffb86b;
+ --green:#00ff9c;
+ --gold:#ffb86b;
+ --red:#ff4d4d;
 }
 
-/* ===== MATRIX BACKGROUND ===== */
-canvas{
-  position:fixed;
-  inset:0;
-  z-index:1;
-}
+/* MATRIX */
+canvas{position:fixed;inset:0;z-index:1}
 
-/* ===== UI LAYERS ===== */
-#ui{
-  position:fixed;
-  inset:0;
-  z-index:3;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  pointer-events:none;
+/* SCREENS */
+.screen{
+ position:fixed;inset:0;z-index:3;
+ display:flex;justify-content:center;align-items:center;
+ opacity:0;pointer-events:none;transition:opacity 1s
 }
+.screen.active{opacity:1;pointer-events:auto}
 
-/* ===== TOP BAR ===== */
-#top{
-  width:100%;
-  padding:16px;
-  display:flex;
-  justify-content:center;
-  font-size:18px;
-  letter-spacing:2px;
-}
-#entropy{
-  color:var(--red);
-  margin-left:8px;
-}
-
-/* ===== TEXT ===== */
-#text{
-  margin-top:60px;
-  text-align:center;
-  max-width:720px;
-  line-height:1.6;
-}
-.glitch{
-  animation:glitch 1.2s infinite;
-}
+/* TEXT */
+.panel{text-align:center;max-width:760px;padding:24px}
+.line{margin:14px 0;font-size:18px;opacity:0;transform:translateY(10px);transition:.6s}
+.line.show{opacity:1;transform:none}
+.glitch{animation:glitch 1.3s infinite}
 @keyframes glitch{
-  0%{text-shadow:none}
-  30%{text-shadow:-2px 0 red,2px 0 cyan}
-  60%{text-shadow:2px 0 red,-2px 0 cyan}
-  100%{text-shadow:none}
+ 0%{text-shadow:none}
+ 40%{text-shadow:-2px 0 red,2px 0 cyan}
+ 100%{text-shadow:none}
 }
 
-/* ===== FRACTURES ===== */
-.fracture{
-  position:fixed;
-  width:90px;
-  height:90px;
-  background:#000;
-  border:2px solid var(--red);
-  box-shadow:0 0 25px var(--red);
-  z-index:5;
-  cursor:pointer;
-  animation:pulse 1.1s infinite;
+/* CHOICES */
+.choice{
+ border:2px solid;padding:18px;margin:16px 0;cursor:pointer
 }
-.fracture.good{
-  border-style:solid;
+.choice:hover{background:rgba(255,255,255,.05)}
+
+/* FOUNDATION */
+#entropyBar{
+ position:fixed;top:10px;left:50%;transform:translateX(-50%);
+ color:var(--red);z-index:10;font-size:18px
+}
+
+.fracture{
+ position:fixed;width:80px;height:80px;
+ background:#000;
+ border:2px solid var(--red);
+ box-shadow:0 0 25px var(--red);
+ z-index:6;cursor:pointer;
+ animation:pulse 1s infinite
 }
 .fracture.fake{
-  border-style:dashed;
-  opacity:.8;
+ border-style:dashed;
+ opacity:.6
 }
-
 @keyframes pulse{
-  0%{transform:scale(.95)}
-  50%{transform:scale(1.05)}
-  100%{transform:scale(.95)}
-}
-
-/* ===== SHAKE ===== */
-body.chaos{
-  animation:shake .15s infinite;
-}
-@keyframes shake{
-  0%{transform:translate(0,0)}
-  25%{transform:translate(2px,-2px)}
-  50%{transform:translate(-2px,2px)}
-  75%{transform:translate(2px,2px)}
-  100%{transform:translate(0,0)}
+ 0%{transform:scale(.95)}
+ 50%{transform:scale(1.05)}
+ 100%{transform:scale(.95)}
 }
 </style>
 </head>
@@ -121,110 +73,115 @@ body.chaos{
 
 <canvas id="matrix"></canvas>
 
-<div id="ui">
-  <div id="top">
-    РІВЕНЬ РОЗПАДУ:
-    <span id="entropy">72</span>%
-  </div>
-
-  <div id="text">
-    <div class="glitch">ГЛАВА I — ФУНДАМЕНТ</div>
-    <br>
-    Система втрачає форму.<br>
-    Дані більше не сходяться.<br><br>
-    <b>Ти не виправляєш.</b><br>
-    <b>Ти утримуєш структуру.</b>
-  </div>
+<!-- PROLOGUE -->
+<div id="prologue" class="screen active">
+ <div class="panel">
+  <div class="line show">СИСТЕМА ТРІЩИТЬ.</div>
+  <div class="line show">НЕ ЗОВНІ — ВСЕРЕДИНІ.</div>
+  <div class="line show glitch">ДАНІ БІЛЬШЕ НЕ СХОДЯТЬСЯ.</div>
+  <div class="line show">ПОТРІБЕН ПРИНЦИП.</div>
+ </div>
 </div>
 
+<!-- CHOICE -->
+<div id="choice" class="screen">
+ <div class="panel">
+  <div class="line show">ОБЕРИ ШЛЯХ.</div>
+  <div class="choice" style="border-color:var(--gold);color:var(--gold)" onclick="startFoundation()">
+   ФУНДАМЕНТ // СТІЙКІСТЬ
+  </div>
+ </div>
+</div>
+
+<!-- FOUNDATION -->
+<div id="foundation" class="screen">
+ <div class="panel">
+  <div class="line show" style="color:var(--gold)">ГЛАВА I — ФУНДАМЕНТ</div>
+  <div class="line show">ТИ НЕ ВИПРАВЛЯЄШ.</div>
+  <div class="line show">ТИ УТРИМУЄШ.</div>
+ </div>
+</div>
+
+<div id="entropyBar">РОЗПАД: <span id="entropy">100</span>%</div>
+
 <script>
-/* ===== MATRIX ===== */
+/* MATRIX */
 const canvas=document.getElementById("matrix");
 const ctx=canvas.getContext("2d");
 let w,h,cols;
 function resize(){
-  w=canvas.width=innerWidth;
-  h=canvas.height=innerHeight;
-  cols=Math.floor(w/16);
+ w=canvas.width=innerWidth;
+ h=canvas.height=innerHeight;
+ cols=Math.floor(w/16)
 }
 resize();onresize=resize;
 const chars="01";
 let drops=Array(cols).fill(0);
-
 function matrix(){
-  ctx.fillStyle="rgba(0,0,0,.3)";
-  ctx.fillRect(0,0,w,h);
-  ctx.fillStyle="#00ff9c";
-  ctx.font="16px monospace";
-  drops.forEach((y,i)=>{
-    ctx.fillText(chars[Math.random()>0.5?1:0],i*16,y*16);
-    if(y*16>h||Math.random()>.96)drops[i]=0;
-    drops[i]++;
-  });
-  requestAnimationFrame(matrix);
+ ctx.fillStyle="rgba(0,0,0,.4)";
+ ctx.fillRect(0,0,w,h);
+ ctx.fillStyle="#00ff9c";
+ ctx.font="16px monospace";
+ drops.forEach((y,i)=>{
+  ctx.fillText(chars[Math.random()>0.5?1:0],i*16,y*16);
+  if(y*16>h||Math.random()>.97)drops[i]=0;
+  drops[i]++
+ });
+ requestAnimationFrame(matrix)
 }
 matrix();
 
-/* ===== GAME LOGIC ===== */
-let entropy=72;
-let stabilized=false;
+/* FLOW */
+setTimeout(()=>{
+ document.getElementById("prologue").classList.remove("active");
+ document.getElementById("choice").classList.add("active");
+},5000);
+
+let entropy=100;
 let fractures=[];
-const entropyEl=document.getElementById("entropy");
 
-function spawnFracture(){
-  if(fractures.length>6) return;
+function spawnFracture(real=true){
+ const f=document.createElement("div");
+ f.className="fracture"+(real?"":" fake");
+ f.style.top=Math.random()*80+"%";
+ f.style.left=Math.random()*80+"%";
 
-  const f=document.createElement("div");
-  const isReal=Math.random()<0.65;
+ f.onclick=()=>{
+  if(real){
+   entropy-=8;
+   f.remove();
+   fractures=fractures.filter(x=>x!==f);
+  }else{
+   f.style.top=Math.random()*80+"%";
+   f.style.left=Math.random()*80+"%";
+  }
+ };
 
-  f.className="fracture "+(isReal?"good":"fake");
-  f.style.top=Math.random()*75+"%";
-  f.style.left=Math.random()*75+"%";
-
-  f.onclick=()=>{
-    if(isReal){
-      entropy-=10;
-      f.style.borderColor="var(--green)";
-      f.style.boxShadow="0 0 25px var(--green)";
-    }else{
-      entropy+=6;
-      f.style.transform="translate(40px,-40px)";
-    }
-    f.remove();
-    fractures=fractures.filter(x=>x!==f);
-  };
-
-  document.body.appendChild(f);
-  fractures.push(f);
+ document.body.appendChild(f);
+ fractures.push(f);
 }
 
-setInterval(()=>{
-  if(stabilized) return;
+function maintainFractures(){
+ const realCount=fractures.filter(f=>!f.classList.contains("fake")).length;
+ if(realCount<2){
+  spawnFracture(true);
+ }
+ if(Math.random()<0.3){
+  spawnFracture(false);
+ }
+}
 
-  entropy+=0.3;
-  entropy+=fractures.length*0.2;
+function startFoundation(){
+ document.getElementById("choice").classList.remove("active");
+ document.getElementById("foundation").classList.add("active");
 
-  entropy=Math.max(0,Math.min(100,entropy));
-  entropyEl.textContent=Math.floor(entropy);
-
-  if(entropy>85){
-    document.body.classList.add("chaos");
-    if(Math.random()<0.08) spawnFracture();
-  }else if(entropy>65){
-    document.body.classList.remove("chaos");
-    if(Math.random()<0.05) spawnFracture();
-  }else{
-    document.body.classList.remove("chaos");
-  }
-
-  if(entropy<=0){
-    stabilized=true;
-    document.getElementById("text").innerHTML=
-      "<b>ФУНДАМЕНТ УТРИМАНО.</b><br><br>Система стабілізується.";
-    fractures.forEach(f=>f.remove());
-  }
-
-},120);
+ setInterval(()=>{
+  entropy+=0.2;
+  entropy=Math.min(100,entropy);
+  document.getElementById("entropy").textContent=Math.floor(entropy);
+  maintainFractures();
+ },700);
+}
 </script>
 
 </body>
